--- a/src/html/about.html
+++ b/src/html/about.html
@@ -12,7 +12,7 @@
         <main class="m-auto">
             <div class="flex h-full w-full items-start justify-between">
                 <div class="flex h-fit w-1/2 flex-col justify-start pr-6">
-                    <p class="font-playfair-display font-bold text-red-800">Brotherland ist ein Projekt von Martina Zaninelli und ...</p>
+                    <p class="font-playfair-display font-bold text-red-800">Brotherland ist ein Projekt von Martina Zaninelli und Thomas Jakobs</p>
 
                     <p class="font-playfair-display font-bold text-red-800 underline">Ausstellungen und Nominierungen</p>
                     <div class="h-4"></div>
@@ -41,25 +41,18 @@
 
                     <p class="font-playfair-display font-bold text-red-800 underline">Biographien</p>
                     <p>
-                        Martina macht die Fotos, Thomas stellt die Fragen. Gemeinsam haben sie Brotherland konzipiert und arbeiten seit über
-                        zwei Jahren daran. Martina ist in Italien geboren und aufgewachsen. Thomas ist in einem Staat geboren und
-                        aufgewachsen, den es nicht mehr gibt, der DDR. Beide leben jetzt in Berlin. Martina hat einen BA in Moderner und
-                        Zeitgenössischer Geschichte und besuchte Lisa Barnards Masterclass an der ISSP. Thomas hat als Straßenpädagoge und
-                        Erzieher gearbeitet. Jetzt arbeiten beide - im Berliner Nachtleben - als Türsteher. Ihr Projekt Brotherland wurde
-                        bei Castelnuovo Fotografia (Italien), Les Boutographies (Frankreich) und Fusion Festival ausgestellt, kam auf die
-                        Longlist für das Format Festival und wurde in verschiedenen Städten in Deutschland wie Rostock, Dresden und Berlin
-                        ausgestellt.
+                        Martina macht die Fotos, Thomas stellt die Fragen. Gemeinsam haben sie Brotherland konzipiert und arbeiten seit über zwei Jahren daran. Martina ist in Italien geboren und aufgewachsen. Thomas ist in einem Staat geboren und aufgewachsen, den es nicht mehr gibt, der DDR. Beide leben jetzt in Berlin. Martina hat einen BA in Moderner und Zeitgenössischer Geschichte und besuchte Lisa Barnards Masterclass an der ISSP. Thomas hat als Straßenpädagoge und Erzieher gearbeitet. Jetzt arbeiten beide - im Berliner Nachtleben - als Türsteher. Ihr Projekt Brotherland wurde bei Castelnuovo Fotografia (Italien), Les Boutographies (Frankreich) und Fusion Festival ausgestellt, kam auf die Longlist für das Format Festival und wurde in verschiedenen Städten in Deutschland wie Rostock, Dresden und Berlin ausgestellt.
                     </p>
-                    <div class="h-4"></div>
+                    <div class="h-12"></div>
                     <div>Die Realisierung der Webseite wurde ermöglicht dank der Förderung der</div>
                     <!-- AAS -->
-                    <div class="relative h-full w-full overflow-hidden rounded-sm">
-                        <img src="/public/images/Logo-AAS-1.jpg" class="absolute h-fit w-full object-cover" />
+                    <div class="relative w-2/3 mx-auto my-4">
+                        <img src="/public/images/Logo-AAS-1.jpg" />
                     </div>
-                    <div>und mit der Untersützung der Soziale Bildung e.V. / Dokumentationszentrum „Lichtenhagen im Gedächtnis“</div>
+                    <div>und mit der Untersützung der <a href="https://soziale-bildung.org/ueber_uns/politische-bildung/dokumentationszentrum-lichtenhagen-im-gedaechtnis/">Soziale Bildung e.V. / Dokumentationszentrum „Lichtenhagen im Gedächtnis“</a></div>
                     <!-- Dokumentationszentrum -->
-                    <div class="relative h-full w-full overflow-hidden rounded-sm">
-                        <img src="/public/images/dokzentrum-logo.jpg" class="absolute h-fit w-full object-cover" />
+                    <div class="relative w-2/3 mx-auto mt-4">
+                        <img src="/public/images/dokzentrum-logo.jpg" />
                     </div>
                 </div>
             </div>
