--- a/src/html/interviews/intrvw_dm02.html
+++ b/src/html/interviews/intrvw_dm02.html
@@ -18,14 +18,17 @@
                 author: "David Macou",
                 authorLink: "../bio.html#macou",
                 audioFilePath: "/public/audio/DM_02.mp3",
-                imageFilePath: "/public/images/DM_ 02.jpg",
+                imageFilePath: "/public/images/DM_02.jpg",
                 imageCaption: "Hoyerswerda 1991 - Image Courtesy of Detlev Kennerth",
+                additionalContext: "Im September 1991 wurden in Hoyerswerda tagelang ein Wohnheim für Vertragsarbeiter (Albert-Schweitzer-Straße) und eine Gefüchtetenunterkunft (Thomas-Müntzer-Straße) angegriffen. Zeitweise standen bis zu 500 Personen vor den Heimen und beteiligten sich an den Angriffen.",
+                prevLink: "intrvw_dm01.html",
+                nextLink: "intrvw_ia01.html",
             },
         };
     </script>
 
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - David Macou"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - David Macou 2"}' />
     </head>
 
     <body class="bg-white text-gray-700" onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
