--- a/src/html/interviews/intrvw_ia02.html
+++ b/src/html/interviews/intrvw_ia02.html
@@ -5,38 +5,35 @@
             text: {
                 title: "Was guckst du",
                 main: [
-                    `Die Gesellschaft war nicht so interessiert.`,
-                    `Ein Interesse war schon
-da, aber das Problem war der Streit mit den Nachbarn. Die Nachbarn haben gefragt „Warum nehmt ihr den jetzt [mit nach Hause],
-ist das euer Kind jetzt oder wie ist das?“, wir waren noch jung. Es
-gab immer Ärger mit einigen Rechtsextremen […] und [die Kollegen] haben Angst gehabt, deswegen war der Kontakt [mit uns so].
-Wir waren nicht die Menschen, die Arbeitskollegen öfters mit nach
-Hause nehmen können. Man hatte mit den Nachbarn Ärger gekriegt und der Nachbar hat gefragt: „Kennst du nicht jemand der
-weiß ist, mit dem du dich beschäftigen kannst oder befreundet sein
-kannst? Du weißt nicht was die hier machen. Die haben es geschafft
-zu uns zu kommen, das alles irgendwie zu machen, aber wir können
-nirgendwo hinreisen. Und du nimmst die mit zu dir nach Hause.
-Spinnst du?“.`,
-                    `[...] Aber einige waren auch sehr interessiert, die sich
-gefreut haben. Und am Tierpark hatten wir schöne Zeiten hier. Nur
-solange die Gruppe nicht gekommen, die gegen uns waren, die angeblich Nachfolger von Hitler waren.`,
+                    `Wenn du, einer alleine, oder zu zweit, wurdest du immer von Gruppen von Jugendlichen provoziert, sie selbst haben sich vorgestellt als
+Nachfolger von Hitler. Haben uns dann gefragt ob wir Hitler kennen. Wir haben gesagt „Nein“. Keiner hat uns die Geschichte von
+Deutschland erzählt. Dann auf einmal kommt eine Gruppe von Jugendlichen, die sagen die sind die Nachfolger von Hitler. „Wir repräsentieren Hitler und Hitler hat die Menschen wie euch nicht gemocht“. „Warum?“. „Weil du schwarz bist“. Man hat Angst gehabt.
+Das war in Berlin 1982-1983 haben wir ab und zu mal diese
+Gruppe immer getroffen.`,
+                    `Wenn du alleine warst, war immer Prob-
+lem abends. Ab da sind wir immer zu zweit, zu dritt gelaufen. Die
+haben uns dann immer so richtig angeguckt, wenn wir zurück geguckt habe, kam dann: „Was guckst du?“. Wir waren noch jung.`,
+                    `Wir haben gehört, ab und zu, der oder der andere, wurde zusammen geschlagen. Aber wer? Immer die Gruppen die sagen, die sind
+die Nachfolger von Hitler.`,
                 ],
                 author: "Ibraimo Alberto",
                 authorLink: "../bio.html#alberto",
                 audioFilePath: "/public/audio/IA_02.mp3",
-                imageFilePath: "/public/images/IA_ 02.jpg",
-                imageCaption: "Neonazis auf einer Montagsdemonstration in Leipzig",
+                imageFilePath: "/public/images/IA_02.jpg",
+                imageCaption:
+                    "Neonazis auf einer Montagsdemonstration in Leipzig, 1990. Bildcredit: Bundesarchiv, Bild 183-1990-0115-032 / Kluge, Wolfgang /CC-BY-SA 3.0",
+                additionalContext: "",
+                prevLink: "intrvw_ia01.html",
+                nextLink: "intrvw_jr01.html",
             },
         };
     </script>
 
     <head>
-        <include src="./partials/head.html"
-            locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Ibraimo Alberto 2"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Ibraimo Alberto 2"}' />
     </head>
 
-    <body class="bg-white text-gray-700"
-        onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
+    <body class="bg-white text-gray-700" onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
         <header>
             <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_ia02"}'></include>
         </header>
@@ -47,5 +44,4 @@ solange die Gruppe nicht gekommen, die gegen uns waren, die angeblich Nachfolger
             </scope>
         </main>
     </body>
-
 </html>
