--- a/src/html/virtual-exhibits/ve2.html
+++ b/src/html/virtual-exhibits/ve2.html
@@ -34,7 +34,7 @@
                         <!-- Audio -->
                         <div class="mx-auto mt-4 flex w-1/3 justify-center rounded-sm bg-gray-900 px-2 py-8">
                             <include
-                                src="./partials/interv_audio.html"
+                                src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/01_J_R_01.mp3", "title": ""}'
                             ></include>
                         </div>
@@ -42,11 +42,11 @@
                     <div class="ml-1 mr-4 flex min-h-min basis-1/2 flex-col">
                         <!-- Plattenbauten Hoch -->
                         <div class="relative aspect-3/2 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_06.jpg" class="absolute h-full w-full object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_06.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                         <!-- Plattenbauten mittelhoch -->
                         <div class="relative aspect-3/2 w-full overflow-hidden rounded-sm pt-2">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_07.jpg" class="absolute h-full w-full object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_07.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                     </div>
                 </div>
@@ -55,13 +55,13 @@
                     <div class="-mt-20 flex basis-1/2 flex-col justify-between pr-1">
                         <!-- Hausecke; türkise Fenster -->
                         <div class="relative mr-12 aspect-2/3 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_08.jpg" class="absolute h-full w-full object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_08.jpg" class="absolute h-full w-full object-cover" />
                         </div>
 
                         <!-- Audio "Die kannten keine Schwarzen" -->
                         <div class="mb-20 flex w-full justify-center rounded-sm bg-gray-900 px-2 py-8">
                             <include
-                                src="./partials/interv_audio.html"
+                                src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/02_die_kannten_keine_Schwarzen.mp3", "title": ""}'
                             >
                             </include>
@@ -70,7 +70,7 @@
                     <div class="flex basis-1/2 flex-col justify-end pl-1">
                         <!-- Feuerzeug -->
                         <div class="relative ml-8 mt-24 aspect-2/3 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_09.jpg" class="absolute h-full w-full object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_09.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                     <div class="basis-2/3 pb-24 pr-8">
                         <!-- Nahaufnahme Interviewpartner -->
                         <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_010.jpg" class="absolute h-full w-full object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_010.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                     </div>
                     <div class="mt-auto basis-1/3">
@@ -97,13 +97,13 @@
                     <div class="flex w-full flex-col justify-between">
                         <!-- Schwimmbad -->
                         <div class="relative -mt-12 aspect-3/2 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_011.jpg" class="absolute object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_011.jpg" class="absolute object-cover" />
                         </div>
 
                         <!-- Audio unterhalb v. Schwimmbad -->
                         <div class="-mb-16 flex w-full justify-center rounded-sm bg-gray-900 px-2 py-8">
                             <include
-                                src="./partials/interv_audio.html"
+                                src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/04_ein_freundschaftliches_verhältnis.mp3", "title": "ein freundschatliches Verhältnis"}'
                             >
                             </include>
@@ -114,7 +114,7 @@
                         <!-- Audio zw. Schwimmbad & Datsche -->
                         <div class="flex w-full justify-center rounded-sm bg-gray-900 px-2 py-8">
                             <include
-                                src="./partials/interv_audio.html"
+                                src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/03_du_hattest_gar_nicht_die_möglichkeit.mp3", "title": "du hattest gar nicht die Möglichkeit"}'
                             >
                             </include>
@@ -124,7 +124,7 @@
                     <div class="w-full pt-32">
                         <!-- Datsche -->
                         <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_012.jpg" class="absolute h-full w-full object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_012.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                     <div class="flex w-3/5 flex-col justify-between">
                         <!-- Baum -->
                         <div class="relative mt-44 aspect-2/3 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_013.jpg" class="absolute h-full w-full object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_013.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                     </div>
 
