--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -29,7 +29,7 @@
                         <!-- Audio -->
                         <div class="z-20 mb-36 flex w-4/5 justify-center rounded-sm bg-gray-900 px-2 py-8">
                             <include
-                                src="./partials/interv_audio.html"
+                                src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/01_wir_wollten_das_ja_letzten_Endes.mp3", "title": "wir wollten das ja letzten endes"}'
                             >
                             </include>
@@ -37,14 +37,14 @@
 
                         <!-- Steine -->
                         <div class="relative z-10 aspect-2/3 w-full translate-x-8 overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_015.jpg" class="absolute h-full w-full object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_015.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                     </div>
 
                     <div class="ml-1 mr-4 flex h-full basis-1/2 flex-col items-center justify-between">
                         <!-- Tauben-->
                         <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm pt-16">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_014.jpg" class="absolute object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_014.jpg" class="absolute object-cover" />
                         </div>
 
                         <!-- Text "Meine Arbeit nehmen die.."  -->
@@ -56,7 +56,7 @@
                         <!-- Audio "wir wollten das ja letzten endes" -->
                         <div class="flex w-1/4 justify-center rounded-sm bg-gray-900 px-2 py-8">
                             <include
-                                src="./partials/interv_audio.html"
+                                src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/01_wir_wollten_das_ja_letzten_Endes.mp3", "title": "wir wollten das ja letzten endes"}'
                             >
                             </include>
@@ -69,7 +69,7 @@
                         <!-- Audio "der Rassismus wurde noch stärker" -->
                         <div class="flex w-4/5 justify-center rounded-sm bg-gray-900 px-2 py-8">
                             <include
-                                src="./partials/interv_audio.html"
+                                src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/03_der_rassismus_wurde_noch_stärker.mp3", "title": "der Rassismus wurde noch stärker"}'
                             >
                             </include>
@@ -78,7 +78,7 @@
                     <div class="flex basis-3/5 flex-col justify-start pl-1">
                         <!-- Interviewpartner -->
                         <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_016.jpg" class="absolute h-full w-full object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_016.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                         <!-- Audio "wir wollten das ja letzten endes" -->
                         <div class="flex w-1/6 justify-center rounded-sm bg-gray-900 px-2 py-8">
                             <include
-                                src="./partials/interv_audio.html"
+                                src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/01_wir_wollten_das_ja_letzten_Endes.mp3", "title": "wir wollten das ja letzten endes"}'
                             >
                             </include>
@@ -101,7 +101,7 @@
                             <!-- Nahaufnahme Interviewpartner -->
                             <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm">
                                 <img
-                                    src="/public/images/Zaninelli_Jacobs_BROTHERLAND_017.jpg"
+                                    src="/public/images/Zaninelli_Jakobs_BROTHERLAND_017.jpg"
                                     class="absolute h-full w-full object-cover"
                                 />
                             </div>
@@ -113,7 +113,7 @@
                     <div class="flex basis-1/2 flex-col justify-between pr-12">
                         <!-- Fresse 1 -->
                         <div class="relative -mt-12 aspect-3/2 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_018.jpg" class="absolute object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_018.jpg" class="absolute object-cover" />
                         </div>
 
                         <!-- Text "Meine Arbeit nehmen die.."  -->
@@ -128,12 +128,12 @@
                     <div class="flex basis-1/2 flex-col justify-end py-28 pl-12">
                         <!-- Fresse 2 -->
                         <div class="relative aspect-3/2 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_019.jpg" class="absolute h-full w-full object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_019.jpg" class="absolute h-full w-full object-cover" />
                         </div>
 
                         <!-- Fresse 3 -->
                         <div class="relative aspect-3/2 w-full overflow-hidden rounded-sm pt-20">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_020.jpg" class="absolute h-full w-full object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_020.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
 
                         <!-- Autobrand -->
                         <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_022.jpg" class="absolute object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_022.jpg" class="absolute object-cover" />
                         </div>
 
                         <div class="mb-auto h-1/3"></div>
@@ -153,12 +153,12 @@
                     <div class="-mr-8 flex w-fit flex-col justify-between">
                         <!-- Bauzaun -->
                         <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_021.jpg" class="absolute object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_021.jpg" class="absolute object-cover" />
                             <div class="absolute m-auto h-full w-1/3 translate-x-2/3 translate-y-1/2">
                                 <!-- Audio "wir wollten das ja letzten endes" -->
                                 <div class="m-auto flex w-4/5 items-center justify-center rounded-sm bg-gray-900 px-2 py-8">
                                     <include
-                                        src="./partials/interv_audio.html"
+                                        src="./partials/interview_audio.html"
                                         locals='{"audioFilePath": "../../../public/audio/05_ich_dachte_ihr_seid_schon_weg.mp3", "title": "ich dachte ihr seid schon weg"}'
                                     >
                                     </include>
