--- a/src/html/virtual-exhibits/ve4.html
+++ b/src/html/virtual-exhibits/ve4.html
@@ -28,14 +28,14 @@
                     <div class="flex h-full w-2/5 justify-start">
                         <!-- Stahlturm -->
                         <div class="aspect-2/3 w-full overflow-hidden rounded-sm object-cover">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_023.jpg" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_023.jpg" />
                         </div>
                     </div>
                     <div class="absolute left-1/2 top-1/4 flex h-fit w-2/5 -translate-x-1/2 -translate-y-1/4 justify-start">
                         <!-- Audio "die ganze Struktur zerbrach" -->
                         <div class="flex w-full justify-center rounded-sm bg-gray-900 px-2 py-8">
                             <include
-                                src="./partials/interv_audio.html"
+                                src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/01_die_ganze_Struktur_zerbrach.mp3", "title": "die ganze Struktur zerbrach"}'
                             >
                             </include>
@@ -50,7 +50,7 @@
                             <!-- Audio "das nahm ja so überhand" -->
                             <div class="absolute top-1/2 flex h-fit w-1/2 -translate-y-1/2 justify-center rounded-sm bg-gray-900 px-2 py-8">
                                 <include
-                                    src="./partials/interv_audio.html"
+                                    src="./partials/interview_audio.html"
                                     locals='{"audioFilePath": "../../../public/audio/02_das_nahm_ja_so_Überhand.mp3", "title": "das nahm ja so Überhand"}'
                                 >
                                 </include>
@@ -60,7 +60,7 @@
 
                     <!-- Plattenbau-->
                     <div class="relative z-10 aspect-2/3 w-2/5 overflow-hidden rounded-sm object-cover">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_024.jpg" />
+                        <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_024.jpg" />
                     </div>
                 </div>
 
@@ -68,14 +68,14 @@
                     <div class="relative w-11/12 -translate-x-[5%]">
                         <!-- Scherben -->
                         <div class="aspect-3/2 w-full rounded-sm object-cover">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_025.jpg" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_025.jpg" />
                             <span class="absolute w-full text-left text-xs">mit freundlicher Genehmigung von Umbruch Bildarchiv</span>
                         </div>
 
                         <!-- Audio "Besuch bekommen" -->
                         <div class="absolute bottom-0 right-0 w-1/4 translate-x-[5%] translate-y-1/2 rounded-sm bg-gray-900 px-2 py-8">
                             <include
-                                src="./partials/interv_audio.html"
+                                src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/03_Besuch_bekommen.mp3", "title": "Besuch bekommen"}'
                             >
                             </include>
@@ -103,14 +103,14 @@
                     <div class="w-1/2">
                         <!-- Bus 1 -->
                         <div class="aspect-3/2 w-full -translate-y-2/3 overflow-hidden rounded-sm object-cover">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_026.jpg" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_026.jpg" />
                         </div>
                     </div>
                     <div class="w-1/2">
                         <!-- Bus 2 -->
                         <div class="relative aspect-3/2 w-full -translate-x-[10%] rounded-sm">
                             <div class="absolute">
-                                <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_027.jpg" class="object-cover" />
+                                <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_027.jpg" class="object-cover" />
                                 <div class="absolute bottom-0 z-10 w-full translate-y-full overflow-visible text-right text-xs">
                                     mit freundlicher Genehmigung von Detlev Kennerth
                                 </div>
@@ -123,20 +123,20 @@
                     <div class="w-5/12 pb-52">
                         <!-- Flagge -->
                         <div class="aspect-2/3 w-full overflow-hidden rounded-sm object-cover">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_028.jpg" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_028.jpg" />
                         </div>
                     </div>
 
                     <div class="relative w-5/12 pt-52">
                         <!-- Sonnenblume -->
                         <div class="aspect-2/3 w-full overflow-hidden rounded-sm object-cover">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_029.jpg" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_029.jpg" />
                         </div>
 
                         <!-- Audio "Das wollten wir doch nicht" -->
                         <div class="absolute left-1/2 w-5/6 -translate-x-1/2 -translate-y-1/2 rounded-sm bg-gray-900 px-2 py-8">
                             <include
-                                src="./partials/interv_audio.html"
+                                src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/04_das_wollten_wir_doch_nicht.mp3", "title": "das wollten wir doch nicht"}'
                             >
                             </include>
@@ -148,7 +148,7 @@
                     <div class="flex w-[47%] flex-col items-center justify-start">
                         <!-- Klatsch 1 -->
                         <div class="relative aspect-[15/9] w-full rounded-sm">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_030.jpg" class="absolute object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_030.jpg" class="absolute object-cover" />
                         </div>
 
                         <div class="aspect-square w-full"></div>
@@ -156,12 +156,12 @@
                         <!-- Tischtennisplatte -->
                         <div class="relative mt-auto flex h-full w-full flex-col justify-end">
                             <div class="relative aspect-2/3 w-11/12 overflow-hidden rounded-sm">
-                                <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_033.jpg" />
+                                <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_033.jpg" />
                             </div>
                             <!-- Audio "ich dachte ihr seid schon weg" -->
                             <div class="absolute bottom-0 right-0 w-1/4 -translate-y-[150%] rounded-sm bg-gray-900 px-2 py-8">
                                 <include
-                                    src="./partials/interv_audio.html"
+                                    src="./partials/interview_audio.html"
                                     locals='{"audioFilePath": "../../../public/audio/05_ich_dachte_ihr_seid_schon_weg.mp3", "title": "ich dachte ihr seid schon weg"}'
                                 >
                                 </include>
@@ -174,13 +174,13 @@
 
                         <!-- Klatsch 2 -->
                         <div class="relative aspect-3/2 w-full overflow-hidden rounded-sm pb-8">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_031.jpg" class="absolute object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_031.jpg" class="absolute object-cover" />
                         </div>
 
                         <!-- Klatsch 3 -->
                         <div class="relative aspect-3/2 w-full overflow-hidden rounded-sm">
                             <div class="absolute">
-                                <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_032.jpg" class="object-cover" />
+                                <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_032.jpg" class="object-cover" />
                                 <div class="absolute bottom-0 z-10 w-full translate-y-full overflow-visible text-right text-xs">
                                     mit freundlicher Genehmigung von Detlev Kennerth
                                 </div>
@@ -190,7 +190,7 @@
                         <!-- Audio "es gab keine Grenze" -->
                         <div class="absolute bottom-0 right-0 w-4/5 translate-x-[15%] rounded-sm bg-gray-900 px-2 py-8">
                             <include
-                                src="./partials/interv_audio.html"
+                                src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/06_es_gab_keine_Grenze.mp3", "title": "es gab keine Grenze"}'
                             >
                             </include>
