--- a/src/html/interviews/intrvw_ia01.html
+++ b/src/html/interviews/intrvw_ia01.html
@@ -24,8 +24,11 @@ solange die Gruppe nicht gekommen, die gegen uns waren, die angeblich Nachfolger
                 author: "Ibraimo Alberto",
                 authorLink: "../bio.html#alberto",
                 audioFilePath: "/public/audio/IA_01.mp3",
-                imageFilePath: "/public/images/IA_ 01.jpg",
+                imageFilePath: "/public/images/IA_01.jpg",
                 imageCaption: "Berlin-Friedrichsfelde. Postkarte der 80er Jahre",
+                additionalContext: "",
+                prevLink: "intrvw_dm02.html",
+                nextLink: "intrvw_ia02.html",
             },
         };
     </script>
