--- a/src/html/interviews/intrvw_ls01.html
+++ b/src/html/interviews/intrvw_ls01.html
@@ -16,8 +16,12 @@
                 author: "Lan und Huu Loi Bin Seifert",
                 authorLink: "../bio.html#seifert",
                 audioFilePath: "/public/audio/LS_01.mp3",
-                imageFilePath: "/public/images/LS_ 01.png",
+                imageFilePath: "/public/images/LS_01.png",
                 imageCaption: 'Filmstill aus "The Truth Lies in Rostock"',
+                additionalContext:
+                    "August 1992: In Rostock-Lichtenhagen wurden das Wohnheim ehemaliger vietnamesischer Vertragsarbeiter:innen und die „Zentrale Aufnahmestelle für Asylbewerber“ angegriffen. Steine und Molotow-Cocktails flogen gegen die Gebäude und auf die Menschen in ihnen. An diesem Pogrom beteiligten sich mehrere hundert Neonazis und bis zu 3.000 applaudierende Zuschauer:innen.",
+                prevLink: "intrvw_ks01.html",
+                nextLink: "intrvw_mm01.html",
             },
         };
     </script>
@@ -30,7 +34,7 @@
     <body class="bg-white text-gray-700"
         onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
         <header>
-            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_dm01"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_ls01"}'></include>
         </header>
 
         <main>
