--- a/src/html/project.html
+++ b/src/html/project.html
@@ -20,8 +20,8 @@
                     <div class="relative aspect-3/2 w-full grayscale transition-[filter] ease-linear hover:bg-slate-400 hover:grayscale-0">
                         <a href="virtual-exhibits/ve2.html" class="group">
                             <img
-                                src="/public/images/Zaninelli_Jacobs_BROTHERLAND_The Truth Lies in Rostock_ 02.jpg"
-                                class="absolute h-full w-full object-cover cursor-ve"
+                                src="/public/images/Zaninelli_Jakobs_BROTHERLAND_The_Truth_Lies_in_Rostock__02.jpg"
+                                class="cursor-ve absolute h-full w-full object-cover"
                             />
                             <div class="absolute bottom-0 w-full translate-y-full text-right text-xs">
                                 Filmstill aus <span class="italic">The Truth Lies in Rostock</span>/Spectacle
@@ -33,31 +33,31 @@
             <!-- 2. -->
             <div class="mb-20 flex items-center justify-between">
                 <div class="w-4/5 pr-8">
-                    <!-- Image placeholders: Zaninelli_Jacobs_BROTHERLAND_04.jpg -->
+                    <!-- Image placeholders: Zaninelli_Jakobs_BROTHERLAND_04.jpg -->
                     <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:bg-slate-400 hover:grayscale-0">
                         <a href="virtual-exhibits/ve3.html" class="group">
                             <img
-                                src="/public/images/Zaninelli_Jacobs_BROTHERLAND_04.jpg"
-                                class="absolute h-full w-full object-cover cursor-ve"
+                                src="/public/images/Zaninelli_Jakobs_BROTHERLAND_04.jpg"
+                                class="cursor-ve absolute h-full w-full object-cover"
                             />
                         </a>
                     </div>
                 </div>
                 <div class="w-fit pl-8 text-justify">
                     <p>
-                        Am 9. November 1989 fällt die Berliner Mauer und ein Jahr später wird Deutschland wiedervereinigt. Für viele ein
-                        Fest, die Errungenschaft der Freiheit, die Verwirklichung von etwas lang Erträumtem. Für andere der Beginn einer
-                        Zeit geprägt von Gewalt und Angst. Wie so oft hat die Geschichte mindestens zwei Seiten.
+                        Am 9. November 1989 fällt die Berliner Mauer und ein Jahr später wird Deutschland wiedervereinigt. Für viele ein
+                        Fest, die Errungenschaft der Freiheit, die Verwirklichung von etwas lang Erträumtem. Für andere der Beginn einer
+                        Zeit geprägt von Gewalt und Angst. Wie so oft hat die Geschichte mindestens zwei Seiten.
                     </p>
                     <p>
-                        Eberswalde, 24 November 1990. Der – ehemalige – Vertragsarbeiter Amadeu Antonio Kiowa wird von Neonazis überfallen
+                        Eberswalde, 24 November 1990. Der – ehemalige – Vertragsarbeiter Amadeu Antonio Kiowa wird von Neonazis überfallen
                         und verstirbt am 6. Dezember. Er war eines der ersten Todesopfer rassistischer Gewalt im eben erst wiedervereinigten
                         Deutschland. Amadeu Antonio war 1987 als Vertragsarbeiter aus Angola in die DDR gekommen.
                     </p>
                     <p>
-                        Um den Mangel an Arbeitskräften zu beheben, schloss die DDR ab Anfang der 1960er-Jahre bilaterale Verträge mit
-                        anderen Staaten zur Ausbildung und Beschäftigung von Arbeitskräften ab. Diese sozialistischen Herkunftsländer wurden
-                        als Bruderländer definiert. Die ersten Vertragsarbeiter:innen kamen aus Polen und Ungarn, später auch aus Algerien,
+                        Um den Mangel an Arbeitskräften zu beheben, schloss die DDR ab Anfang der 1960er-Jahre bilaterale Verträge mit
+                        anderen Staaten zur Ausbildung und Beschäftigung von Arbeitskräften ab. Diese sozialistischen Herkunftsländer wurden
+                        als Bruderländer definiert. Die ersten Vertragsarbeiter:innen kamen aus Polen und Ungarn, später auch aus Algerien,
                         Angola, Kuba, Mosambik und Vietnam.
                     </p>
                 </div>
@@ -66,17 +66,17 @@
             <div class="mb-6 flex items-center justify-between">
                 <div class="w-fit pr-8 text-justify">
                     <p>
-                        Die „Ausländer raus“-Gewalt nach der Wende begann nicht erst 1992 mit dem Pogrom in Rostock-Lichtenhagen und den
-                        Brandanschlägen 1993 in Mölln und Solingen. Bereits 1991 wurden in Hoyerswerda tagelang ein Wohnheim für
-                        Vertragsarbeiter und eine Geflüchtetenunterkunft angegriffen. Zeitweise standen bis zu 500 Schaulustige vor den
+                        Die „Ausländer raus“-Gewalt nach der Wende begann nicht erst 1992 mit dem Pogrom in Rostock-Lichtenhagen und den
+                        Brandanschlägen 1993 in Mölln und Solingen. Bereits 1991 wurden in Hoyerswerda tagelang ein Wohnheim für
+                        Vertragsarbeiter und eine Geflüchtetenunterkunft angegriffen. Zeitweise standen bis zu 500 Schaulustige vor den
                         Heimen, aus dieser Masse heraus fanden die Angriffe statt. In Rostock-Lichtenhagen wurden das Wohnheim ehemaliger
-                        vietnamesischer Vertragsarbeiter:innen und die „Zentrale Aufnahmestelle für Asylbewerber“ angegriffen. Steine und
-                        Molotow-Cocktails flogen gegen die Gebäude und auf die Menschen in ihnen. An diesem Pogrom beteiligten sich mehrere
+                        vietnamesischer Vertragsarbeiter:innen und die „Zentrale Aufnahmestelle für Asylbewerber“ angegriffen. Steine und
+                        Molotow-Cocktails flogen gegen die Gebäude und auf die Menschen in ihnen. An diesem Pogrom beteiligten sich mehrere
                         hundert Neonazis und bis zu 3.000 applaudierende Zuschauer:innen.
                     </p>
                     <p>
-                        Hoyerswerda und Rostock waren, wie alle rechtsextremistischen Anschläge der 1990er-Jahre, Ausdruck rassistischer und
-                        nationalistischer Einstellungen, die später zum mörderischen Terror des sogenannten NSU führten.
+                        Hoyerswerda und Rostock waren, wie alle rechtsextremistischen Anschläge der 1990er-Jahre, Ausdruck rassistischer und
+                        nationalistischer Einstellungen, die später zum mörderischen Terror des sogenannten NSU führten.
                     </p>
                 </div>
                 <div class="w-4/5 pl-8">
@@ -84,8 +84,8 @@
                     <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:bg-slate-400 hover:grayscale-0">
                         <a href="virtual-exhibits/ve4.html" class="group">
                             <img
-                                src="/public/images/Zaninelli_Jacobs_BROTHERLAND_03.jpg"
-                                class="absolute h-full w-full object-cover cursor-ve"
+                                src="/public/images/Zaninelli_Jakobs_BROTHERLAND_03.jpg"
+                                class="cursor-ve absolute h-full w-full object-cover"
                             />
                         </a>
                     </div>
@@ -97,9 +97,7 @@
                     <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:bg-slate-400 hover:grayscale-0">
                         <!-- Image placeholders: -->
                         <a href="#" class="group">
-                            <div
-                                class="h-full w-full bg-gray-300 cursor-ve"
-                            ></div>
+                            <div class="cursor-ve h-full w-full bg-gray-300"></div>
                         </a>
                     </div>
                 </div>
@@ -108,20 +106,26 @@
                         In der tagesaktuellen Berichterstattung und auch der Geschichtsschreibung kamen – und kommen – die Menschen, gegen
                         die sich diese Gewalt richtete, selten zu Wort. Auf die Fragen, wieso (deutsche) Jugendliche den Hitlergruß machen
                         oder wieso der Rassismus in den neuen Bundesländern womöglich „verständlich“ sei, wurde erheblich mehr Gewicht
-                        gelegt. Wir haben ehemalige Vertragsarbeiter:innen aus Angola, Mosambik und Vietnam interviewt und porträtiert. In
-                        den Interviews erzählen sie von ihren Erlebnissen während der Wende. Ebenso haben wir uns aber auch entschieden,
+                        gelegt.
+                    </p>
+                    <p>
+                        Wir haben ehemalige Vertragsarbeiter:innen aus Angola, Mosambik und Vietnam interviewt und porträtiert. In den
+                        Interviews erzählen sie von ihren Erlebnissen während der Wende. Ebenso haben wir uns aber auch entschieden,
                         Deutsche zu interviewen, die in den in den 1990er-Jahren in Hoyerswerda, Eberswalde und Rostock gelebt haben, um
                         mehr von den/ihren Lebensrealitäten während und nach der Wende zu erfahren.
                     </p>
                     <p>
                         Die Fotos wurden an den Orten aufgenommen, an denen die Anschläge stattfanden, und zeigen sie in einer zeitlosen
                         Dimension. Die Stillleben und das Archivmaterial konzentrieren sich auf die Spektakularisierung der Ereignisse und
-                        auf verschiedene Facetten der Gewalt. In der Summe soll <span class="italic">Brotherland</span>
-                        die Stimmung deutlich machen, in der die Angriffe stattgefunden haben und von einer breiten Masse legitimiert
-                        wurden.
+                        auf verschiedene Facetten der Gewalt.
+                    </p>
+                    <p>
+                        In der Summe soll <span class="italic">Brotherland</span> die Stimmung deutlich machen, in der die Angriffe
+                        stattgefunden haben und von einer breiten Masse legitimiert wurden.
                     </p>
                 </span>
             </div>
+            <p>BROTHERLAND ist ein Projekt von <a href="./about.html">Martina Zaninelli und Thomas Jakobs</a></p>
         </main>
     </body>
 </html>
