--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,14 @@
     <body class="bg-white text-gray-700">
         <div class="flex flex-row place-items-center">
             <div class="relative aspect-2/3 h-screen">
-                <img src="../public/images/Zaninelli_Jacobs_BROTHERLAND_01.jpg" class="h-full w-full object-cover" />
+                <img src="../public/images/Zaninelli_Jakobs_BROTHERLAND_01.jpg" class="h-full w-full object-cover" />
             </div>
             <div class="w-1/2 font-playfair-display text-2xl font-medium uppercase">
                 <nav>
                     <a href="./html/project.html" alt="Project">
                         <div class="w-1/3 rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300">Projekt</div>
                     </a>
-                    <a href="#" alt="Interviews">
+                    <a href="./html/interviews/intrvw_ajm01.html" alt="Interviews">
                         <div class="w-1/3 rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300">Interviews</div>
                     </a>
                     <a href="./html/book.html" alt="Book">
