bios and images

--- a/src/html/interviews/intrvw_dhn01.html
+++ b/src/html/interviews/intrvw_dhn01.html
@@ -36,7 +36,7 @@ hat und die ganze Zeit daran denken muss, was esse ich morgen,
 
     <body class="bg-white text-gray-700" onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
         <header>
-            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_ajm04"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_dhn01"}'></include>
         </header>
 
         <main>
