--- a/src/html/project.html
+++ b/src/html/project.html
@@ -94,10 +94,13 @@
             <!-- 4. -->
             <div class="mb-6 flex items-center justify-between">
                 <div class="w-4/5 pr-8">
-                    <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:bg-slate-400 hover:grayscale-0">
+                    <div class="relative aspect-3/2 w-full grayscale transition-[filter] ease-linear hover:bg-slate-400 hover:grayscale-0">
                         <!-- Image placeholders: -->
                         <a href="#" class="group">
-                            <div class="cursor-ve h-full w-full bg-gray-300"></div>
+                            <img
+                                src="/public/images/Zaninelli_Jakobs_BROTHERLAND_035.jpg"
+                                class="cursor-ve w-full"
+                            />                            
                         </a>
                     </div>
                 </div>
